--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   test:
     timeout-minutes: 5
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
 
@@ -50,14 +50,14 @@ jobs:
           path: dist/chrome.zip
           retention-days: 90
 
-      - name: Upload metafile
-        uses: actions/upload-artifact@v4
-        with:
-          name: Meta files
-          path: |
-            dist/meta.json
-            dist/content-script-meta.json
-          retention-days: 90
+      # - name: Upload metafile
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: Meta files
+      #     path: |
+      #       dist/meta.json
+      #       dist/content-script-meta.json
+      #     retention-days: 90
 
       - name: Build Firefox Extension
         run: npm run build:firefox
