--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "dependencies": {
     "axios": "1.11.0",
     "clsx": "2.1.1",
-    "es-toolkit": "1.39.8",
-    "i18next": "25.3.2",
+    "es-toolkit": "1.39.9",
+    "i18next": "25.3.4",
     "motion": "12.23.12",
     "react": "19.1.1",
     "react-dom": "19.1.1",
@@ -28,7 +28,7 @@
     "typed-webext": "0.7.0",
     "uuid": "11.1.0",
     "webextension-polyfill": "0.12.0",
-    "zod": "4.0.15"
+    "zod": "4.0.17"
   },
   "devDependencies": {
     "@babel/core": "7.28.0",
@@ -42,34 +42,36 @@
     "@rollup/plugin-babel": "6.0.4",
     "@tailwindcss/postcss": "4.1.11",
     "@types/babel__core": "7.20.5",
-    "@types/chrome": "0.1.1",
+    "@types/chrome": "0.1.3",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "24.2.0",
-    "@types/react": "19.1.9",
+    "@types/node": "24.2.1",
+    "@types/react": "19.1.10",
     "@types/react-dom": "19.1.7",
     "@types/webextension-polyfill": "0.12.3",
     "@ziloen/eslint-config": "0.1.69",
     "@ziloen/tailwind-config": "2.0.7",
-    "babel-plugin-annotate-module-pure": "1.0.3",
+    "babel-plugin-annotate-module-pure": "1.0.4",
+    "browserslist-to-esbuild": "2.1.1",
     "chalk": "5.5.0",
     "chokidar": "4.0.3",
     "core-js": "3.45.0",
     "esbuild": "0.25.8",
     "esbuild-plugin-copy": "2.1.1",
     "esbuild-style-plugin": "1.6.3",
-    "eslint": "9.32.0",
+    "eslint": "9.33.0",
     "fs-extra": "11.3.1",
     "globby": "14.1.0",
     "playwright": "1.54.2",
     "prettier": "3.6.2",
     "prettier-plugin-organize-imports": "4.2.0",
     "prettier-plugin-tailwindcss": "0.6.14",
-    "rolldown": "1.0.0-beta.31",
+    "rolldown": "1.0.0-beta.32",
     "rollup-plugin-copy": "3.5.0",
     "sonda": "0.9.0",
     "tailwindcss": "4.1.11",
     "ts-lib-enhance": "1.0.21",
     "typescript": "5.9.2",
+    "unplugin": "2.3.5",
     "web-ext": "8.9.0"
   },
   "webExt": {
