--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@playwright/test": "1.54.2",
     "@prettier/plugin-oxc": "0.0.4",
     "@rollup/plugin-babel": "6.0.4",
+    "@svgr/core": "8.1.0",
+    "@svgr/plugin-jsx": "8.1.0",
     "@tailwindcss/postcss": "4.1.12",
     "@types/babel__core": "7.20.5",
     "@types/chrome": "0.1.4",
@@ -48,7 +50,7 @@
     "@types/react": "19.1.10",
     "@types/react-dom": "19.1.7",
     "@types/webextension-polyfill": "0.12.3",
-    "@ziloen/eslint-config": "0.1.69",
+    "@ziloen/eslint-config": "0.1.70",
     "@ziloen/tailwind-config": "2.0.8",
     "babel-plugin-annotate-module-pure": "1.0.4",
     "browserslist-to-esbuild": "2.1.1",
@@ -65,7 +67,7 @@
     "prettier": "3.6.2",
     "prettier-plugin-organize-imports": "4.2.0",
     "prettier-plugin-tailwindcss": "0.6.14",
-    "rolldown": "1.0.0-beta.32",
+    "rolldown": "1.0.0-beta.33",
     "rollup-plugin-copy": "3.5.0",
     "sonda": "0.9.0",
     "tailwindcss": "4.1.12",
