--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "dev": "node --env-file=.env scripts/rolldown.js",
     "dev:firefox": "node --env-file=.env --env-file=.env.firefox scripts/rolldown.js",
-    "build": "node --env-file=.env.prod scripts/rolldown.js && web-ext build -n chrome.zip",
-    "build:firefox": "node --env-file=.env.prod --env-file=.env.firefox scripts/rolldown.js && web-ext build -n firefox.xpi",
+    "build": "node --env-file=.env.prod scripts/rolldown.js && web-ext build -s dist/chrome -n chrome.zip",
+    "build:firefox": "node --env-file=.env.prod --env-file=.env.firefox scripts/rolldown.js && web-ext build -s dist/firefox -n firefox.xpi",
     "start:chromium": "web-ext run -t chromium",
     "start:firefox": "web-ext run -t firefox-desktop",
     "typecheck": "tsgo -b --noEmit",
@@ -22,7 +22,7 @@
     "motion": "12.23.24",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-i18next": "16.0.0",
+    "react-i18next": "16.0.1",
     "rxjs": "8.0.0-alpha.14",
     "serialize-error": "12.0.0",
     "typed-webext": "0.7.5",
@@ -48,33 +48,31 @@
     "@types/fs-extra": "11.0.4",
     "@types/node": "24.7.2",
     "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.1",
+    "@types/react-dom": "19.2.2",
     "@types/webextension-polyfill": "0.12.4",
-    "@typescript/native-preview": "7.0.0-dev.20251012.1",
-    "@ziloen/eslint-config": "0.1.72",
+    "@ziloen/eslint-config": "0.1.73",
     "@ziloen/tailwind-config": "2.0.8",
     "babel-plugin-annotate-module-pure": "1.0.4",
     "browserslist-to-esbuild": "2.1.1",
     "chokidar": "4.0.3",
     "core-js": "3.46.0",
-    "esbuild": "0.25.10",
+    "esbuild": "0.25.11",
     "eslint": "9.37.0",
     "fs-extra": "11.3.2",
     "playwright": "1.56.0",
     "prettier": "3.6.2",
     "prettier-plugin-organize-imports": "4.3.0",
-    "prettier-plugin-tailwindcss": "0.6.14",
-    "rolldown": "1.0.0-beta.42",
+    "prettier-plugin-tailwindcss": "0.7.0",
+    "rolldown": "1.0.0-beta.43",
     "rollup-plugin-copy": "3.5.0",
     "sonda": "0.9.0",
     "tailwindcss": "4.1.14",
     "ts-lib-enhance": "1.0.21",
     "typescript": "5.9.3",
     "unplugin": "2.3.10",
-    "web-ext": "8.10.0"
+    "web-ext": "9.0.0"
   },
   "webExt": {
-    "sourceDir": "dist/dev",
     "artifactsDir": "dist",
     "run": {
       "browserConsole": false,
