--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:firefox": "node --env-file=.env.prod --env-file=.env.firefox scripts/rolldown.js && web-ext build -s dist/firefox -n firefox.xpi",
     "start:chromium": "web-ext run -t chromium",
     "start:firefox": "web-ext run -t firefox-desktop",
-    "typecheck": "tsgo -b --noEmit",
+    "typecheck": "tsc -b --noEmit",
     "lint": "eslint .",
     "format": "prettier --write .",
     "init:playwright": "playwright install chromium --with-deps",
