--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint": "9.38.0",
     "fs-extra": "11.3.2",
     "playwright": "1.56.1",
+    "postcss-preset-env": "10.4.0",
     "prettier": "3.6.2",
     "prettier-plugin-organize-imports": "4.3.0",
     "prettier-plugin-tailwindcss": "0.7.1",
