--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "@types/webextension-polyfill": "0.12.4",
+    "@vitejs/plugin-react": "5.1.1",
     "@ziloen/eslint-config": "0.1.74",
     "@ziloen/tailwind-config": "2.0.13",
     "babel-plugin-annotate-module-pure": "1.0.4",
@@ -66,7 +67,7 @@
     "prettier-plugin-tailwindcss": "0.7.1",
     "rolldown": "1.0.0-beta.52",
     "rollup-plugin-copy": "3.5.0",
-    "sonda": "0.10.0",
+    "sonda": "0.10.1",
     "svgo": "4.0.0",
     "tailwindcss": "4.1.17",
     "ts-lib-enhance": "1.0.22",
