--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,7 +1,5 @@
 {
-  "extends": [
-    "./tsconfig.app.json"
-  ],
+  "extends": "./tsconfig.app.json",
   "compilerOptions": {
     "rootDir": "./",
     "composite": true,
