--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "test:playwright": "playwright test"
   },
   "dependencies": {
-    "@base-ui-components/react": "1.0.0-beta.7",
+    "@base-ui-components/react": "1.0.0-rc.0",
     "axios": "1.13.2",
     "clsx": "2.1.1",
     "es-toolkit": "1.42.0",
-    "i18next": "25.7.1",
+    "i18next": "25.7.2",
     "motion": "12.23.25",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "react-i18next": "16.3.5",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
+    "react-i18next": "16.4.0",
     "rxjs": "8.0.0-alpha.14",
     "serialize-error": "12.0.0",
     "typed-webext": "0.7.9",
@@ -39,7 +39,7 @@
     "@fontsource-variable/fira-code": "5.2.7",
     "@fontsource-variable/noto-sans-sc": "5.2.9",
     "@playwright/test": "1.57.0",
-    "@prettier/plugin-oxc": "0.1.2",
+    "@prettier/plugin-oxc": "0.1.3",
     "@rollup/plugin-babel": "6.1.0",
     "@svgr/core": "8.1.0",
     "@svgr/plugin-jsx": "8.1.0",
@@ -47,14 +47,14 @@
     "@types/babel__core": "7.20.5",
     "@types/chrome": "0.1.32",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "24.10.1",
+    "@types/node": "24.10.2",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "@types/webextension-polyfill": "0.12.4",
-    "@typescript/native-preview": "7.0.0-dev.20251202.1",
-    "@vitejs/plugin-react": "5.1.1",
+    "@typescript/native-preview": "7.0.0-dev.20251208.1",
+    "@vitejs/plugin-react": "5.1.2",
     "@ziloen/eslint-config": "0.1.74",
-    "@ziloen/tailwind-config": "2.0.13",
+    "@ziloen/tailwind-config": "2.0.15",
     "babel-plugin-annotate-module-pure": "1.0.4",
     "browserslist-to-esbuild": "2.1.1",
     "chokidar": "5.0.0",
@@ -62,11 +62,11 @@
     "eslint": "9.39.1",
     "fs-extra": "11.3.2",
     "playwright": "1.57.0",
-    "postcss-preset-env": "10.4.0",
-    "prettier": "3.7.3",
+    "postcss-preset-env": "10.5.0",
+    "prettier": "3.7.4",
     "prettier-plugin-organize-imports": "4.3.0",
     "prettier-plugin-tailwindcss": "0.7.2",
-    "rolldown": "1.0.0-beta.52",
+    "rolldown": "1.0.0-beta.53",
     "rollup-plugin-copy": "3.5.0",
     "sonda": "0.10.1",
     "svgo": "4.0.0",
@@ -74,6 +74,7 @@
     "ts-lib-enhance": "1.0.22",
     "typescript": "5.9.3",
     "unplugin": "2.3.11",
+    "vite": "8.0.0-beta.1",
     "web-ext": "9.2.0"
   },
   "webExt": {
@@ -88,5 +89,8 @@
       "overwriteDest": true,
       "filename": "extension.xpi"
     }
+  },
+  "overrides": {
+    "vite": "$vite"
   }
 }
