--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "test:playwright": "playwright test"
   },
   "dependencies": {
-    "@base-ui-components/react": "1.0.0-rc.0",
+    "@base-ui/react": "1.0.0",
     "axios": "1.13.2",
     "clsx": "2.1.1",
     "es-toolkit": "1.42.0",
     "i18next": "25.7.2",
-    "motion": "12.23.25",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
-    "react-i18next": "16.4.0",
+    "motion": "12.23.26",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "react-i18next": "16.4.1",
     "rxjs": "8.0.0-alpha.14",
     "serialize-error": "12.0.0",
     "typed-webext": "0.7.9",
@@ -43,15 +43,15 @@
     "@rollup/plugin-babel": "6.1.0",
     "@svgr/core": "8.1.0",
     "@svgr/plugin-jsx": "8.1.0",
-    "@tailwindcss/postcss": "4.1.17",
+    "@tailwindcss/postcss": "4.1.18",
     "@types/babel__core": "7.20.5",
     "@types/chrome": "0.1.32",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "24.10.2",
+    "@types/node": "24.10.3",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "@types/webextension-polyfill": "0.12.4",
-    "@typescript/native-preview": "7.0.0-dev.20251208.1",
+    "@typescript/native-preview": "7.0.0-dev.20251211.1",
     "@vitejs/plugin-react": "5.1.2",
     "@ziloen/eslint-config": "0.1.74",
     "@ziloen/tailwind-config": "2.0.15",
@@ -66,11 +66,11 @@
     "prettier": "3.7.4",
     "prettier-plugin-organize-imports": "4.3.0",
     "prettier-plugin-tailwindcss": "0.7.2",
-    "rolldown": "1.0.0-beta.53",
+    "rolldown": "1.0.0-beta.54",
     "rollup-plugin-copy": "3.5.0",
     "sonda": "0.10.1",
     "svgo": "4.0.0",
-    "tailwindcss": "4.1.17",
+    "tailwindcss": "4.1.18",
     "ts-lib-enhance": "1.0.22",
     "typescript": "5.9.3",
     "unplugin": "2.3.11",
