--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "type": "module",
   "scripts": {
     "dev": "node --env-file=.env scripts/rolldown.js",
+    "dev:vite": "vite dev",
     "dev:firefox": "node --env-file=.env --env-file=.env.firefox scripts/rolldown.js",
     "build": "node --env-file=.env.prod scripts/rolldown.js && web-ext build -s dist/chrome -n chrome.zip",
+    "build:vite": "vite build",
     "build:firefox": "node --env-file=.env.prod --env-file=.env.firefox scripts/rolldown.js && web-ext build -s dist/firefox -n firefox.xpi",
     "start:chromium": "web-ext run -t chromium",
     "start:firefox": "web-ext run -t firefox-desktop",
@@ -15,17 +17,17 @@
     "test:playwright": "playwright test"
   },
   "dependencies": {
-    "@base-ui/react": "1.0.0",
+    "@base-ui/react": "1.1.0",
     "axios": "1.13.2",
     "clsx": "2.1.1",
-    "es-toolkit": "1.43.0",
+    "es-toolkit": "1.44.0",
     "i18next": "25.7.4",
-    "motion": "12.26.2",
+    "motion": "12.27.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-i18next": "16.5.3",
     "rxjs": "8.0.0-alpha.14",
-    "serialize-error": "12.0.0",
+    "serialize-error": "13.0.1",
     "typed-webext": "0.7.9",
     "uuid": "13.0.0",
     "webextension-polyfill": "0.12.0",
@@ -37,21 +39,22 @@
     "@babel/preset-react": "7.28.5",
     "@babel/preset-typescript": "7.28.5",
     "@fontsource-variable/fira-code": "5.2.7",
-    "@fontsource-variable/noto-sans-sc": "5.2.9",
+    "@fontsource-variable/noto-sans-sc": "5.2.10",
     "@playwright/test": "1.57.0",
     "@prettier/plugin-oxc": "0.1.3",
     "@rollup/plugin-babel": "6.1.0",
     "@svgr/core": "8.1.0",
     "@svgr/plugin-jsx": "8.1.0",
     "@tailwindcss/postcss": "4.1.18",
+    "@tailwindcss/vite": "4.1.18",
     "@types/babel__core": "7.20.5",
-    "@types/chrome": "0.1.33",
+    "@types/chrome": "0.1.35",
     "@types/fs-extra": "11.0.4",
     "@types/node": "24.10.4",
     "@types/react": "19.2.8",
     "@types/react-dom": "19.2.3",
     "@types/webextension-polyfill": "0.12.4",
-    "@typescript/native-preview": "7.0.0-dev.20260114.1",
+    "@typescript/native-preview": "7.0.0-dev.20260120.1",
     "@vitejs/plugin-react": "5.1.2",
     "@ziloen/eslint-config": "0.1.77",
     "@ziloen/tailwind-config": "2.0.15",
@@ -62,7 +65,7 @@
     "eslint": "9.39.2",
     "fs-extra": "11.3.3",
     "playwright": "1.57.0",
-    "postcss-preset-env": "11.1.0",
+    "postcss-preset-env": "11.1.1",
     "prettier": "3.8.0",
     "prettier-plugin-organize-imports": "4.3.0",
     "prettier-plugin-tailwindcss": "0.7.2",
@@ -74,7 +77,7 @@
     "ts-lib-enhance": "1.0.22",
     "typescript": "5.9.3",
     "unplugin": "2.3.11",
-    "vite": "8.0.0-beta.5",
+    "vite": "8.0.0-beta.8",
     "web-ext": "9.2.0"
   },
   "webExt": {
