--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
   },
   "dependencies": {
     "@base-ui/react": "1.1.0",
-    "axios": "1.13.3",
+    "axios": "1.13.4",
     "clsx": "2.1.1",
     "es-toolkit": "1.44.0",
     "i18next": "25.8.0",
     "motion": "12.29.2",
     "react": "19.2.4",
     "react-dom": "19.2.4",
-    "react-i18next": "16.5.3",
+    "react-i18next": "16.5.4",
     "rxjs": "8.0.0-alpha.14",
     "serialize-error": "13.0.1",
     "typed-webext": "0.7.9",
@@ -52,10 +52,10 @@
     "@types/chrome": "0.1.36",
     "@types/fs-extra": "11.0.4",
     "@types/node": "24.10.9",
-    "@types/react": "19.2.9",
+    "@types/react": "19.2.10",
     "@types/react-dom": "19.2.3",
     "@types/webextension-polyfill": "0.12.4",
-    "@typescript/native-preview": "7.0.0-dev.20260126.1",
+    "@typescript/native-preview": "7.0.0-dev.20260128.1",
     "@vitejs/plugin-react": "5.1.2",
     "@ziloen/eslint-config": "0.1.77",
     "@ziloen/tailwind-config": "2.0.15",
@@ -71,8 +71,9 @@
     "prettier": "3.8.1",
     "prettier-plugin-organize-imports": "4.3.0",
     "prettier-plugin-tailwindcss": "0.7.2",
-    "rolldown": "1.0.0-rc.1",
+    "rolldown": "1.0.0-rc.2",
     "rollup-plugin-copy": "3.5.0",
+    "sass": "1.97.3",
     "sonda": "0.10.1",
     "svgo": "4.0.0",
     "tailwindcss": "4.1.18",
